# bajie

./: .gitignore  README.md  config.py  main.py  pyproject.toml
core/: bot.py  bounded_cache.py  cleanup.py  conversation_state.py  dependencies.py  event_handler.py  executor.py  image_utils.py  intent.py  memory.py  message_parser.py  skills_loader.py  tenancy.py
core/tools/: __init__.py  feishu_docs.py  skill_tools.py
data/: config.example.yaml
lark_bot/: api.py  event.py  ws.py
llm/: chat_client.py  compiler.py  humanized_responses.py  learner.py  processor.py
skills/funny/: SKILL.md
skills/general/: SKILL.md
skills/image_gen/: SKILL.md
skills/image_gen/scripts/: main.py
skills/image_understanding/: SKILL.md
skills/reflection/: SKILL.md
skills/reflection/scripts/: main.py
tests/: test_bounded_cache.py  test_compile_pipeline.py  test_event_handler.py  test_feishu_docs_tool.py  test_feishu_ws.py  test_image_utils.py  test_multi_image_output.py  test_tenancy.py
