[project]
name = "bajie"
version = "0.1.0"
description = "FastAPI Feishu bot service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0.0",
    "pycryptodome>=3.20.0",
    "openai>=1.40.0",
    "google-genai>=1.0.0",
    "pillow>=10.4.0",
    "chromadb>=0.5.0",
    "lark-oapi>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
